Small updates for the web page

--- a/index.html
+++ b/index.html
@@ -53,26 +53,34 @@
 
 To create a new state machine you can either make a builder object or just create a transition model.
 
-TODO: add code examples
-</p><h2>Dependencies</h2>
-<p>Runtime:
-guava
+	 </p>
+	  <p>
+	  TODO: add code examples
+	  </p>
+<h2>Dependencies</h2>
+<p><strong>Runtime:</strong><br/>
+<a href="http://code.google.com/p/guava-libraries/">Guava</a><br/>
+</p>
+	  <p>
+<strong>Build time:</strong><br/>
 
-Build time:
-JUnit
-Mockachino
-
+<a href="http://www.junit.org/">JUnit</a><br/>
+<a href="http://code.google.com/p/mockachino/">Mockachino</a>
+</p>
 All libs are checked in</p>
 <h2>Install</h2>
-<p>To build:
-ant all
+<p><strong>To build:</strong><br/>
+ant all<br/>
 
-To make a jar:
+<strong>To make a jar:</strong><br/>
 ant all package</p>
 <h2>Authors</h2>
-<p>thehiflyer (per.malmen@gmail.com)<br/><br/>      </p>
+<p>thehiflyer aka hiflyer (per.malmen@gmail.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p> (per.malmen@gmail.com)<br/>      </p>
+<p> (per.malmen@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
