Added license info

--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@ ant all package</p>
       by running:
       <pre>$ git clone git://github.com/thehiflyer/Fettle</pre>
     </p>
+	  <h2>License</h2>
+	  <p>Fettle is licensed under the <a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p>
 
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/thehiflyer/Fettle">thehiflyer/Fettle</a>
