Updated web to 0.6.0

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@ ant all package</p>
 		</p>
 	  <p>
 		  If you don't need the source,
-		 just download the jar of the latest version&nbsp;<a href="https://github.com/downloads/thehiflyer/Fettle/fettle-0.5.0.jar">fettle-0.5.0.jar</a>
+		 just download the jar of the latest version&nbsp;<a href="https://github.com/downloads/thehiflyer/Fettle/fettle-0.6.0.jar">fettle-0.6.0.jar</a><br/>
+		  or if you're in a GWT project <a href="https://github.com/downloads/thehiflyer/Fettle/fettle-0.6.0-gwt.jar">fettle-0.6.0-gwt.jar</a>
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
