--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div id="container">
 
     <div class="download">
-		 <a href="https://github.com/downloads/thehiflyer/Fettle/fettle-0.5.0.jar">
+		 <a href="https://github.com/downloads/thehiflyer/Fettle/fettle-0.6.1.jar">
         <img border="0" width="90" src="jar.png"></a>
       <a href="http://github.com/thehiflyer/Fettle/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
@@ -100,12 +100,14 @@ public void usingTransitionModelDirectly() {
 <h2>Dependencies</h2>
 <p><strong>Runtime:</strong><br/>
 <a href="http://code.google.com/p/guava-libraries/">Guava</a><br/>
+	Only if you want to use the PredicateCondition, otherwise there are no runtime dependencies
 </p>
 	  <p>
 <strong>Build time:</strong><br/>
 
 <a href="http://www.junit.org/">JUnit</a><br/>
-<a href="http://code.google.com/p/mockachino/">Mockachino</a>
+<a href="http://code.google.com/p/mockachino/">Mockachino</a><br/>
+<a href="http://code.google.com/p/guava-libraries/">Guava</a>
 </p>
 All libs are checked in</p>
 <h2>Install</h2>
@@ -131,8 +133,8 @@ ant all package</p>
 		</p>
 	  <p>
 		  If you don't need the source,
-		 just download the jar of the latest version&nbsp;<a href="https://github.com/downloads/thehiflyer/Fettle/fettle-0.6.0.jar">fettle-0.6.0.jar</a><br/>
-		  or if you're in a GWT project <a href="https://github.com/downloads/thehiflyer/Fettle/fettle-0.6.0-gwt.jar">fettle-0.6.0-gwt.jar</a>
+		 just download the jar of the latest version&nbsp;<a href="https://github.com/downloads/thehiflyer/Fettle/fettle-0.6.1.jar">fettle-0.6.1.jar</a><br/>
+		  or if you're in a GWT project <a href="https://github.com/downloads/thehiflyer/Fettle/fettle-0.6.1-gwt.jar">fettle-0.6.1-gwt.jar</a>
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
