Added info on mvn repos

--- a/index.html
+++ b/index.html
@@ -231,6 +231,9 @@ gradle.bat build (on windows)
       by running:
       <pre>$ git clone git://github.com/thehiflyer/Fettle</pre>
     </p>
+	 <p>
+		 Fettle is now uploaded to <a href="http://search.maven.org/#browse%7C222743246">Sonatypes maven repository</a>
+	 </p>
 	  <h2>License</h2>
 	  <p>Fettle is licensed under the <a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p>
 
