Changed the windows command line to gradlew.bat from gradle.bat

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ gradle jar</p>
 <p>
 There is a gradle wrapper checked in so that you can build without installing gradle on your machine. Gradle is however awesome so you should really get it :)<br/>
 ./gradlew build  (on *nix)<br/>
-gradle.bat build (on windows)
+gradlew.bat build (on windows)
 </p>
 <h2>Fettle Users</h2>
 <ul>
